--- a/examples/5-1.solve_sat_domain_problem.ipynb
+++ b/examples/5-1.solve_sat_domain_problem.ipynb
@@ -73,19 +73,19 @@
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 8,\n",
-       " 'conflict cost': 0.064,\n",
-       " 'decisions': 3,\n",
-       " 'decisions cost': 0.032,\n",
-       " 'propagations': 326,\n",
-       " 'propagations cost': 0.259,\n",
-       " 'conflict literals': 55,\n",
-       " 'actual CPU time': 7.28606,\n",
-       " 'solving time': 1.03,\n",
-       " 'annealing time': 0.46,\n",
-       " 'simulation time': 1.11494,\n",
-       " 'quantum success number': 8,\n",
-       " 'quantum conflict number': 15,\n",
+       " 'conflicts': 7,\n",
+       " 'conflict cost': 0.078,\n",
+       " 'decisions': 5,\n",
+       " 'decisions cost': 0.061,\n",
+       " 'propagations': 383,\n",
+       " 'propagations cost': 0.318,\n",
+       " 'conflict literals': 43,\n",
+       " 'actual CPU time': 2.69447,\n",
+       " 'solving time': 1.106,\n",
+       " 'annealing time': 0.4,\n",
+       " 'simulation time': 1.38003,\n",
+       " 'quantum success number': 11,\n",
+       " 'quantum conflict number': 9,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
        " 'is sat': True}"
@@ -127,14 +127,14 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 2.681,\n",
+       " 'conflict cost': 3.48,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.425,\n",
+       " 'decisions cost': 0.566,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 5.61,\n",
+       " 'propagations cost': 6.472,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 0.098497,\n",
-       " 'solving time': 10.472,\n",
+       " 'actual CPU time': 0.1198,\n",
+       " 'solving time': 12.89,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
        " 'quantum success number': 0,\n",
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 125, 'minisat': 1383}, 'conflict cost': {'janus': 0.9210000000000003, 'minisat': 9.341999999999999}, 'decisions': {'janus': 31, 'minisat': 1814}, 'decisions cost': {'janus': 0.29300000000000004, 'minisat': 1.6239999999999997}, 'propagations': {'janus': 4029, 'minisat': 32252}, 'propagations cost': {'janus': 3.1610000000000005, 'minisat': 19.378000000000004}, 'conflict literals': {'janus': 734, 'minisat': 8726}, 'actual CPU time': {'janus': 87.75882999999999, 'minisat': 0.837894}, 'solving time': {'janus': 13.057, 'minisat': 36.74499999999998}, 'annealing time': {'janus': 6.28, 'minisat': 0.0}, 'simulation time': {'janus': 14.004918, 'minisat': 0.0}, 'quantum success number': {'janus': 121, 'minisat': 0}, 'quantum conflict number': {'janus': 193, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
+      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 145, 'minisat': 1383}, 'conflict cost': {'janus': 1.4050000000000002, 'minisat': 12.207000000000003}, 'decisions': {'janus': 34, 'minisat': 1814}, 'decisions cost': {'janus': 0.43500000000000005, 'minisat': 2.3430000000000004}, 'propagations': {'janus': 4407, 'minisat': 32252}, 'propagations cost': {'janus': 4.26, 'minisat': 22.713}, 'conflict literals': {'janus': 901, 'minisat': 8726}, 'actual CPU time': {'janus': 35.6241, 'minisat': 1.004006}, 'solving time': {'janus': 15.620999999999999, 'minisat': 45.886}, 'annealing time': {'janus': 6.48, 'minisat': 0.0}, 'simulation time': {'janus': 19.33545, 'minisat': 0.0}, 'quantum success number': {'janus': 136, 'minisat': 0}, 'quantum conflict number': {'janus': 188, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
      ]
     }
    ],
@@ -234,19 +234,19 @@
        "    <tr>\n",
        "      <th>janus</th>\n",
        "      <td>12</td>\n",
-       "      <td>125</td>\n",
-       "      <td>0.921</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0.293</td>\n",
-       "      <td>4029</td>\n",
-       "      <td>3.161</td>\n",
-       "      <td>734</td>\n",
-       "      <td>87.758830</td>\n",
-       "      <td>13.057</td>\n",
-       "      <td>6.28</td>\n",
-       "      <td>14.004918</td>\n",
-       "      <td>121</td>\n",
-       "      <td>193</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1.405</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.435</td>\n",
+       "      <td>4407</td>\n",
+       "      <td>4.260</td>\n",
+       "      <td>901</td>\n",
+       "      <td>35.624100</td>\n",
+       "      <td>15.621</td>\n",
+       "      <td>6.48</td>\n",
+       "      <td>19.33545</td>\n",
+       "      <td>136</td>\n",
+       "      <td>188</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>12</td>\n",
@@ -255,16 +255,16 @@
        "      <th>minisat</th>\n",
        "      <td>19</td>\n",
        "      <td>1383</td>\n",
-       "      <td>9.342</td>\n",
+       "      <td>12.207</td>\n",
        "      <td>1814</td>\n",
-       "      <td>1.624</td>\n",
+       "      <td>2.343</td>\n",
        "      <td>32252</td>\n",
-       "      <td>19.378</td>\n",
+       "      <td>22.713</td>\n",
        "      <td>8726</td>\n",
-       "      <td>0.837894</td>\n",
-       "      <td>36.745</td>\n",
+       "      <td>1.004006</td>\n",
+       "      <td>45.886</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -277,19 +277,19 @@
       ],
       "text/plain": [
        "         restarts  conflicts  conflict cost  decisions  decisions cost  \\\n",
-       "janus          12        125          0.921         31           0.293   \n",
-       "minisat        19       1383          9.342       1814           1.624   \n",
+       "janus          12        145          1.405         34           0.435   \n",
+       "minisat        19       1383         12.207       1814           2.343   \n",
        "\n",
        "         propagations  propagations cost  conflict literals  actual CPU time  \\\n",
-       "janus            4029              3.161                734        87.758830   \n",
-       "minisat         32252             19.378               8726         0.837894   \n",
+       "janus            4407              4.260                901        35.624100   \n",
+       "minisat         32252             22.713               8726         1.004006   \n",
        "\n",
        "         solving time  annealing time  simulation time  \\\n",
-       "janus          13.057            6.28        14.004918   \n",
-       "minisat        36.745            0.00         0.000000   \n",
+       "janus          15.621            6.48         19.33545   \n",
+       "minisat        45.886            0.00          0.00000   \n",
        "\n",
        "         quantum success number  quantum conflict number  \\\n",
-       "janus                       121                      193   \n",
+       "janus                       136                      188   \n",
        "minisat                       0                        0   \n",
        "\n",
        "         quantum one time solve number  is satisfiable  is sat  \n",
@@ -333,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
